Backgroun image is now displayed correctly
The background image wasn't properly scaled and is now covering the
entire window.

--- a/web/assets/css/index.css
+++ b/web/assets/css/index.css
@@ -1,3 +1,6 @@
 body {
-	background: url('../img/nursery.jpg') no-repeat center center fixed;
+	background-image: url('../img/nursery.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
